--- a/challenge-new3.html
+++ b/challenge-new3.html
@@ -4,14 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>잠시만 기다려 주세요 - 올리브영</title>
-
-    <link rel="dns-prefetch" href="https://raw.githubusercontent.com">
-    <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin>
-
-    <link rel="preload" as="image" href="https://raw.githubusercontent.com/cf-song2/oo-test/main/images/OY_logo.svg" />
-    <link rel="preload" as="image" href="https://raw.githubusercontent.com/cf-song2/oo-test/main/images/OY_character.png" />
-
-
     <style>
       * {
         margin: 0;
@@ -32,15 +24,12 @@
         width: 100%;
         margin: 0 auto;
         position: relative;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
       }
 
-      /* Main Container */
+      /* 새로운 Grid 기반 컨테이너 */
       .container {
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-rows: 1fr auto;
         width: 100%;
         min-height: 100vh;
         background: #ffffff;
@@ -48,15 +37,13 @@
 
       /* Main Content - 안내 영역 */
       .main-content {
-        flex: 1;
-        width: 100%;
-        background: #ffffff;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        min-height: 398px;
         padding: 50px 20px;
+        background: #ffffff;
+        grid-row: 1;
       }
 
       .content-wrapper {
@@ -135,12 +122,27 @@
       .bottom-section {
         width: 100%;
         background: #ffffff;
-        display: block;
-        text-align: center;
-        padding: 20px 20px 40px;
-        flex-shrink: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 30px 20px 40px;
+        grid-row: 2;
+        border-top: 1px solid transparent; /* 시각적 분리를 위한 보이지 않는 경계 */
       }
 
+      /* Cloudflare 브랜딩 */
+      .cloudflare-branding {
+        font-family: "SF Pro Text", sans-serif;
+        font-size: 12px;
+        color: #9aa0a8;
+        text-align: center;
+        margin-bottom: 10px;
+        width: 100%;
+        max-width: 300px;
+      }
+
+      /* 정보 카드 */
       .info-card {
         width: 100%;
         max-width: 275px;
@@ -181,73 +183,24 @@
       .info-value {
         font-family: "SF Pro Text", sans-serif;
         font-weight: 400;
-        font-size: 14px;
-        color: #9aa0a8;
+        font-size: 13px;
+        color: #131518;
         flex: 1;
+        text-align: left;
       }
-
-      /* Cloudflare 브랜딩 */
-      .cloudflare-branding {
-        font-family: "SF Pro Text", sans-serif;
-        font-size: 12px;
-        color: #9aa0a8;
-        text-align: center;
-        margin-bottom: 10px;
-      }
-      
-
 
       /* Desktop Layout - 1024px 이상 */
       @media (min-width: 1024px) {
-        body {
-          background: #ffffff;
-          padding: 0;
-          /* 기본적으로 중앙 정렬하되, 높이가 부족할 때는 상단 정렬 */
-          justify-content: center;
-          align-items: center;
-          min-height: 100vh;
-        }
-
         .container {
-          width: 100%;
-          max-width: 1024px;
-          background: #ffffff;
-          border-radius: 0;
-          box-shadow: none;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          min-height: 100vh;
-          /* 콘텐츠가 화면보다 클 때를 위한 패딩 */
-          padding: 40px 0;
-          box-sizing: border-box;
+          grid-template-columns: 1fr 1fr;
+          grid-template-rows: 1fr;
+          align-items: stretch;
         }
 
-        /* 화면 높이가 콘텐츠보다 작을 때 상단 정렬 */
-        @media (min-width: 1024px) and (max-height: 800px) {
-          body {
-            justify-content: flex-start;
-          }
-
-          .container {
-            justify-content: flex-start;
-            min-height: auto;
-          }
-        }
-
-        /* Main Content - 컴팩트한 중앙 정렬 */
-        .main-content {
-          /* flex: 1 제거하여 내용 크기에 맞게 조정 */
-          flex: none;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          padding: 0;
-          background: #ffffff;
-          width: 100%;
-          min-height: auto;
+        .content-area {
+          grid-column: 1;
+          grid-row: 1;
+          padding: 50px 40px;
         }
 
         .content-wrapper {
@@ -256,32 +209,15 @@
           gap: 60px;
           align-items: center;
           justify-content: center;
-          display: flex;
-          flex-direction: column;
         }
 
         .text-section {
-          width: 100%;
-          max-width: 500px;
-          align-items: center;
-          gap: 24px;
-        }
-
-        .title-section {
-          align-items: center;
-          gap: 20px;
-        }
-
-        .logo {
-          width: 280px;
-          height: 33px;
+          max-width: 450px;
         }
 
         .main-title {
           font-size: 42px;
           line-height: 50.4px;
-          text-align: center;
-          font-weight: 700;
           color: #131518;
         }
 
@@ -304,14 +240,23 @@
           display: none;
         }
 
-        /* Bottom section for desktop - content-wrapper 바로 아래 */
+        /* 데스크탑에서 하단 섹션 */
         .bottom-section {
+          grid-column: 1 / -1; /* 전체 너비 사용 */
+          grid-row: 2;
           background: transparent;
-          padding: 0;
-          width: auto;
-          margin-top: 40px;
-          /* position과 bottom 관련 속성들 완전 제거 */
-          position: static;
+          padding: 40px;
+          flex-direction: row;
+          justify-content: center;
+          gap: 60px;
+        }
+
+        .cloudflare-branding {
+          font-size: 14px;
+          margin-bottom: 20px;
+          color: #9aa0a8;
+          text-align: center;
+          max-width: none;
         }
 
         .info-card {
@@ -355,12 +300,12 @@
           color: #9aa0a8;
           font-weight: 400;
         }
+      }
 
-        .cloudflare-branding {
-          font-size: 14px;
-          margin-bottom: 20px;
-          color: #9aa0a8;
-          text-align: center;
+      /* 데스크탑에서 그리드 조정 */
+      @media (min-width: 1024px) {
+        .container {
+          grid-template-rows: 1fr auto;
         }
       }
 
@@ -373,11 +318,11 @@
 
       @media (max-width: 375px) {
         .main-content {
-          padding: 50px 16px;
+          padding: 50px 40px;
         }
 
         .bottom-section {
-          padding: 0 16px 40px;
+          padding: 20px 16px 40px;
         }
       }
 
@@ -448,7 +393,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </body>
 </html>
