--- a/challenge-new3.html
+++ b/challenge-new3.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>잠시만 기다려 주세요 - 올리브영</title>
+
+    <link rel="dns-prefetch" href="https://raw.githubusercontent.com">
+    <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin>
+
+    <link rel="preload" as="image" href="https://raw.githubusercontent.com/cf-song2/oo-test/main/images/OY_logo.svg" />
+    <link rel="preload" as="image" href="https://raw.githubusercontent.com/cf-song2/oo-test/main/images/OY_character.png" />
+
+
     <style>
       * {
         margin: 0;
@@ -24,12 +32,15 @@
         width: 100%;
         margin: 0 auto;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
       }
 
-      /* 새로운 Grid 기반 컨테이너 */
+      /* Main Container */
       .container {
-        display: grid;
-        grid-template-rows: 1fr auto;
+        display: flex;
+        flex-direction: column;
         width: 100%;
         min-height: 100vh;
         background: #ffffff;
@@ -37,13 +48,15 @@
 
       /* Main Content - 안내 영역 */
       .main-content {
+        flex: 1;
+        width: 100%;
+        background: #ffffff;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        min-height: 398px;
         padding: 50px 20px;
-        background: #ffffff;
-        grid-row: 1;
       }
 
       .content-wrapper {
@@ -122,27 +135,12 @@
       .bottom-section {
         width: 100%;
         background: #ffffff;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 30px 20px 40px;
-        grid-row: 2;
-        border-top: 1px solid transparent; /* 시각적 분리를 위한 보이지 않는 경계 */
-      }
-
-      /* Cloudflare 브랜딩 */
-      .cloudflare-branding {
-        font-family: "SF Pro Text", sans-serif;
-        font-size: 12px;
-        color: #9aa0a8;
+        display: block;
         text-align: center;
-        margin-bottom: 10px;
-        width: 100%;
-        max-width: 300px;
+        padding: 20px 20px 40px;
+        flex-shrink: 0;
       }
 
-      /* 정보 카드 */
       .info-card {
         width: 100%;
         max-width: 275px;
@@ -183,24 +181,73 @@
       .info-value {
         font-family: "SF Pro Text", sans-serif;
         font-weight: 400;
-        font-size: 13px;
-        color: #131518;
+        font-size: 14px;
+        color: #9aa0a8;
         flex: 1;
-        text-align: left;
       }
+
+      /* Cloudflare 브랜딩 */
+      .cloudflare-branding {
+        font-family: "SF Pro Text", sans-serif;
+        font-size: 12px;
+        color: #9aa0a8;
+        text-align: center;
+        margin-bottom: 10px;
+      }
+      
+
 
       /* Desktop Layout - 1024px 이상 */
       @media (min-width: 1024px) {
-        .container {
-          grid-template-columns: 1fr 1fr;
-          grid-template-rows: 1fr;
-          align-items: stretch;
+        body {
+          background: #ffffff;
+          padding: 0;
+          /* 기본적으로 중앙 정렬하되, 높이가 부족할 때는 상단 정렬 */
+          justify-content: center;
+          align-items: center;
+          min-height: 100vh;
         }
 
-        .content-area {
-          grid-column: 1;
-          grid-row: 1;
-          padding: 50px 40px;
+        .container {
+          width: 100%;
+          max-width: 1024px;
+          background: #ffffff;
+          border-radius: 0;
+          box-shadow: none;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          min-height: 100vh;
+          /* 콘텐츠가 화면보다 클 때를 위한 패딩 */
+          padding: 40px 0;
+          box-sizing: border-box;
+        }
+
+        /* 화면 높이가 콘텐츠보다 작을 때 상단 정렬 */
+        @media (min-width: 1024px) and (max-height: 800px) {
+          body {
+            justify-content: flex-start;
+          }
+
+          .container {
+            justify-content: flex-start;
+            min-height: auto;
+          }
+        }
+
+        /* Main Content - 컴팩트한 중앙 정렬 */
+        .main-content {
+          /* flex: 1 제거하여 내용 크기에 맞게 조정 */
+          flex: none;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          padding: 0;
+          background: #ffffff;
+          width: 100%;
+          min-height: auto;
         }
 
         .content-wrapper {
@@ -209,15 +256,32 @@
           gap: 60px;
           align-items: center;
           justify-content: center;
+          display: flex;
+          flex-direction: column;
         }
 
         .text-section {
-          max-width: 450px;
+          width: 100%;
+          max-width: 500px;
+          align-items: center;
+          gap: 24px;
+        }
+
+        .title-section {
+          align-items: center;
+          gap: 20px;
+        }
+
+        .logo {
+          width: 280px;
+          height: 33px;
         }
 
         .main-title {
           font-size: 42px;
           line-height: 50.4px;
+          text-align: center;
+          font-weight: 700;
           color: #131518;
         }
 
@@ -240,23 +304,14 @@
           display: none;
         }
 
-        /* 데스크탑에서 하단 섹션 */
+        /* Bottom section for desktop - content-wrapper 바로 아래 */
         .bottom-section {
-          grid-column: 1 / -1; /* 전체 너비 사용 */
-          grid-row: 2;
           background: transparent;
-          padding: 40px;
-          flex-direction: row;
-          justify-content: center;
-          gap: 60px;
-        }
-
-        .cloudflare-branding {
-          font-size: 14px;
-          margin-bottom: 20px;
-          color: #9aa0a8;
-          text-align: center;
-          max-width: none;
+          padding: 0;
+          width: auto;
+          margin-top: 40px;
+          /* position과 bottom 관련 속성들 완전 제거 */
+          position: static;
         }
 
         .info-card {
@@ -300,12 +355,12 @@
           color: #9aa0a8;
           font-weight: 400;
         }
-      }
 
-      /* 데스크탑에서 그리드 조정 */
-      @media (min-width: 1024px) {
-        .container {
-          grid-template-rows: 1fr auto;
+        .cloudflare-branding {
+          font-size: 14px;
+          margin-bottom: 20px;
+          color: #9aa0a8;
+          text-align: center;
         }
       }
 
@@ -318,11 +373,11 @@
 
       @media (max-width: 375px) {
         .main-content {
-          padding: 50px 40px;
+          padding: 50px 16px;
         }
 
         .bottom-section {
-          padding: 20px 16px 40px;
+          padding: 0 16px 40px;
         }
       }
 
@@ -362,24 +417,25 @@
               <h1 class="main-title">잠시만 기다려 주세요</h1>
             </div>
             <p class="subtitle">
-              안전하고 원활한 올리브영 이용을 위해<br />접속 정보를 확인
-              중이에요
+              안전하고 원활한 올리브영 이용을 위해<br />접속 정보를 확인 중이에요
             </p>
           </div>
-
-          <!-- Support Image (Mobile only) -->
+  
+          <!-- Support Image -->
           <div class="support-image"></div>
+          <div class="captcha-container">
+            ::CAPTCHA_BOX::
+          </div>
         </div>
       </div>
-
+  
       <!-- Illustration Section (Desktop only) -->
       <div class="illustration-section">
         <div class="illustration-wrapper"></div>
       </div>
-
+  
       <!-- Bottom Section -->
       <div class="bottom-section">
-        <div class="cloudflare-branding">::CAPTCHA_BOX::</div>
         <div class="info-card">
           <div class="info-row">
             <span class="info-label">RAY_ID</span>
@@ -395,4 +451,4 @@
       </div>
     </div>
   </body>
-</html>
+  
