modified: error token

--- a/challenge-new3.html
+++ b/challenge-new3.html
@@ -424,7 +424,7 @@
           <!-- Support Image -->
           <div class="support-image"></div>
           <div class="captcha-container">
-            ::CAPTCHA_BOX::
+            ::CF_WIDGET_BOX::
           </div>
         </div>
       </div>
