--- a/challenge-new2.html
+++ b/challenge-new2.html
@@ -434,7 +434,7 @@
 
       <!-- Bottom Section -->
       <div class="bottom-section">
-        <div class="cloudflare-branding">::CAPTCHA_BOX::</div>
+        <div class="cloudflare-branding">::CF_WIDGET_BOX::</div>
         <div class="info-card">
           <div class="info-row">
             <span class="info-label">RAY_ID</span>
